--- a/portfolio-frontend/src/sections/About/Bio.css
+++ b/portfolio-frontend/src/sections/About/Bio.css
@@ -1,18 +1,16 @@
 .bio {
-    border-radius: 10px;
-    padding: 20px;
-    text-align: center;
-    max-width: 80%;
-    margin: auto;
-    align-items: baseline;
+  border-radius: 10px;
+  text-align: left; /* Align text to the right */
+  margin: auto;
+  color: #82A3A1; /* Darker font color */
 }
-
 
 .bio-summary {
   font-size: 20px;
-  line-height: 2.0;
-
+  margin-bottom: 20px;
+  color: white;
 }
+
 
 /* Media queries for responsiveness */
 @media (max-width: 768px) {
